containers/orchestration/vendors/kubernetes/installations/hetzner/_lab/kubernetes/traefik/strip-prefix-api-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-api
spec:
  stripPrefix:
    prefixes:
    - /api
