containers/orchestration/vendors/kubernetes/installations/hetzner/_lab/kubernetes/traefik/dashboard-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
  - match: Host(`dashboard.kubernetes.drim.city`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    # middlewares: Add auth middleware
  tls:
    secretName: kubernetes-drim-city
