containers/orchestration/vendors/kubernetes/installations/hetzner/_lab/kubernetes/traefik/web-app-ingress-route-tls.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-app
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes.drim.city`)
      kind: Rule
      services:
        - name: web-app
          port: 80
  tls:
    secretName: kubernetes-drim-city
